package codegen;

option optimize_for = LITE_RUNTIME;
option java_package = "com.dyuproject.protostuff.codegen";
option java_outer_classname = "V22Lite";

message Foo {
  enum EnumSample {
    TYPE0 = 0;
    TYPE1 = 1;
    TYPE2 = 2;
    TYPE3 = 3;
    TYPE4 = 4;
  }
  repeated int32 some_int = 1;
  repeated string some_string = 2;
  repeated Bar bar = 3;
  repeated EnumSample some_enum = 4;
  repeated bytes some_bytes = 5;
  repeated bool some_boolean = 6;
  repeated float some_float = 7;
  repeated double some_double = 8;
  repeated int64 some_long = 9;
}

message Bar {
  enum Status {
    PENDING = 0;
    STARTED = 1;
    COMPLETED = 2;
  }
  optional int32 some_int = 1;
  optional string some_string = 2;
  optional Baz baz = 3;
  optional Status some_enum = 4;
  optional bytes some_bytes = 5;
  optional bool some_boolean = 6;
  optional float some_float = 7;
  optional double some_double = 8;
  optional int64 some_long = 9;
  
}

message Baz {
  optional int64 id = 1;
  optional string name = 2;
  optional int64 timestamp = 3;
}